crates/pith-output/tests/snapshots/query_contract__fmt_report_shape_is_stable.snap
---
source: crates/pith-output/tests/query_contract.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "api_version": 1,
  "code": 0,
  "detail": "query",
  "kind": "query",
  "query": {
    "module": "example",
    "path": "fixtures/example.pi",
    "status": "would_format",
    "view": "format"
  }
}
