crates/pith-output/tests/snapshots/query_contract__module_view_shape_is_stable.snap
---
source: crates/pith-output/tests/query_contract.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "api_version": 1,
  "code": 0,
  "detail": "query",
  "kind": "query",
  "query": {
    "abi_digest": "13e68a5b642bf49fc4ed28d527abe43f3bca517f0f742af916910104019a0ce0",
    "about": [
      {
        "documentation": "module metadata",
        "fields": [
          [
            "owners",
            {
              "about_value_kind": "list",
              "elements": [
                "docs",
                "release"
              ]
            }
          ],
          [
            "purpose",
            {
              "about_value_kind": "text",
              "text": "contract fixture"
            }
          ]
        ]
      }
    ],
    "declarations": [
      {
        "body": {
          "declaration_kind": "nominal",
          "representation": {
            "type_kind": "blob"
          }
        },
        "digest": "13e68a5b642bf49fc4ed28d527abe43f3bca517f0f742af916910104019a0ce0",
        "documentation": "the renderer a document is produced by",
        "name": "Renderer",
        "rendered": "Blob"
      },
      {
        "body": {
          "constructors": [
            {
              "name": "failed",
              "payload": {
                "type_kind": "text"
              }
            },
            {
              "name": "produced",
              "payload": null
            }
          ],
          "declaration_kind": "sum"
        },
        "digest": "13e68a5b642bf49fc4ed28d527abe43f3bca517f0f742af916910104019a0ce0",
        "documentation": "",
        "name": "Outcome",
        "rendered": "failed(Text) | produced"
      }
    ],
    "entries": [
      {
        "coordinate": "example::entry.build",
        "documentation": "produce the default document",
        "interface": {
          "inputs": [],
          "output": {
            "name": "example.Document",
            "type_kind": "nominal"
          },
          "rendered": "() -> example.Document"
        },
        "name": "build",
        "tier": "represented"
      }
    ],
    "imports": [
      {
        "abi_digest": "13e68a5b642bf49fc4ed28d527abe43f3bca517f0f742af916910104019a0ce0",
        "module": "xylem"
      }
    ],
    "module": "example",
    "path": "fixtures/example.pi",
    "rules": [
      {
        "category": "action",
        "documentation": "",
        "interface": {
          "inputs": [
            {
              "name": "example.Renderer",
              "type_kind": "nominal"
            },
            {
              "name": "example.Template",
              "type_kind": "nominal"
            }
          ],
          "output": {
            "name": "example.Document",
            "type_kind": "nominal"
          },
          "rendered": "(example.Renderer, example.Template) -> example.Document"
        },
        "label": "render",
        "tier": "host"
      }
    ],
    "view": "module"
  }
}
