crates/pith-output/tests/snapshots/query_contract__run_view_shape_is_stable.snap
---
source: crates/pith-output/tests/query_contract.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "api_version": 1,
  "code": 0,
  "detail": "query",
  "kind": "query",
  "query": {
    "coordinate": "example::entry.build",
    "entry": "build",
    "interface": {
      "inputs": [],
      "output": {
        "type_kind": "text"
      },
      "rendered": "() -> Text"
    },
    "source": "hydrated",
    "value": {
      "s": "ready",
      "value_kind": "text"
    },
    "view": "run"
  }
}
