crates/pith-output/tests/snapshots/query_contract__selection_view_shape_is_stable.snap
---
source: crates/pith-output/tests/query_contract.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "api_version": 1,
  "code": 0,
  "detail": "query",
  "kind": "query",
  "query": {
    "entry": "build",
    "interface": {
      "inputs": [],
      "output": {
        "type_kind": "text"
      },
      "rendered": "() -> Text"
    },
    "rule": "example::entry.build",
    "tier": "represented",
    "view": "selection"
  }
}
