crates/pith-output/tests/snapshots/query_contract__state_check_shape_is_stable.snap
---
source: crates/pith-output/tests/query_contract.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "api_version": 1,
  "code": 0,
  "detail": "query",
  "kind": "query",
  "query": {
    "records": 12,
    "view": "state_check"
  }
}
