crates/pith-output/tests/snapshots/query_contract__stored_content_shape_is_stable.snap
---
source: crates/pith-output/tests/query_contract.rs
expression: "serde_json::to_value(&record).unwrap()"
---
{
  "api_version": 1,
  "code": 0,
  "detail": "query",
  "kind": "query",
  "query": {
    "id": "13e68a5b642bf49fc4ed28d527abe43f3bca517f0f742af916910104019a0ce0",
    "kind": "blob",
    "path": null,
    "view": "content"
  }
}
